# d361

./: .gitignore  DEVELOPMENT.md  HISTORY.md  PLAN.md  README.md  TODO.md  d361.spec  example_api_usage.py  llms.sh  llms.txt  md.txt  pyproject.toml  test_api_client.py  test_chunked_download.py  test_circuit_breaker.py  test_data_sync.py  test_metrics.py  test_streaming_bulk.py
.github/workflows/: push.yml  release.yml
.specstory/history/: 2025-02-28_02-56-fixing-d365-offline-subpackage-structure.md  2025-02-28_03-04-using-playwright-to-access-xml-sitemap.md  2025-02-28_04-26-html-file-handling-instructions.md
data/offline/: README.md  d360_getsitenav.md  d360_getsitenav.py  d360_makesite.md  d360_makesite.py  d361_offline.css  d361_offline.md  nav.html  nav.json  nav.md  pyproject.toml  sitemap-en.xml
docs/: README.md  d363.json  d363.md  d363.py  d364.md  d364.py  d365.json  d365.md  d366.json  d366.md  document360.json  document360.md  document360_core.json  document361.json  document362.json  mkdocs_export.md  openapi_spec.json  summarize.py  test.json  test.md
examples/: d361.example.toml  mkdocs_export_examples.py
schemas/: d361.schema.json
scripts/: build.sh  generate_d360_models.py  install.sh  json_compress.py  monitor_d360_api.py  process_d360_archive.py  release.sh  test.sh  text_replacement_utility.py
templates/: d361api.toml.example
tests/: conftest.py  mkdocs_test_fixtures.py  test_integration_api.py  test_mkdocs_integration.py  test_mkdocs_units.py  test_package.py  test_performance.py  test_plugin_manager_enhanced.py  test_seo_optimizer_enhanced.py  test_theme_optimizer_enhanced.py  test_unit_config.py  test_unit_models.py  test_unit_providers.py
(+89 files in other folders)
